[package]
name = "cron-pubsub"
version = "0.1.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
chrono = "0.4.40"
pub-sub-client = "0.12.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
tokio-cron-scheduler = { version = "0.9.4" }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.15.1", features = ["v7", "fast-rng", "std"] }
jsonwebtoken = "9.3.1"
derive_more = { version = "2.0.1", features = ["full"] }
